ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_01_19.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"dominica-ii-after-epiphany\", \"dominica-of-time-after-epiphany\"]"
expression: s.0
---
2025-01-19
Second Vespers of Dominica II after Epiphany:
Vespers:
  Antiphons:   Ordinary of Time after Epiphany (or Psalter)
  Psalms:      Psalter
  Chapter:     Ordinary of Time after Epiphany (or Psalter)
  Hymn:        Ordinary of Time after Epiphany (or Psalter)
  Verse:       Ordinary of Time after Epiphany (or Psalter)
  Magnificat:  Proper
  Collect:     Proper
