ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_01_22.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"ss--vincent-and-anastasius--martyrs\", \"ss--vincent-and-anastasius\"]"
expression: s.0
---
2025-01-22
Vespers of Ss. Vincent and Anastasius, Martyrs:
Vespers:
  Antiphons:   Ordinary of Time after Epiphany (or Psalter)
  Psalms:      Psalter
  Chapter:     Common of Martyrs
  Hymn:        Common of Martyrs
  Verse:       Common of Martyrs
  Magnificat:  Common of Martyrs
  Collect:     Proper
