ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_01_24.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"st--timothy--bishop-and-martyr\", \"st--timothy\"]"
expression: s.0
---
2025-01-24
Vespers of St. Timothy, Bishop and Martyr:
Vespers:
  Antiphons:   Ordinary of Time after Epiphany (or Psalter)
  Psalms:      Psalter
  Chapter:     Common of Confessor Bishops
  Hymn:        Common of Confessor Bishops
  Verse:       Common of Confessor Bishops
  Magnificat:  Common of Confessor Bishops
  Collect:     Proper
