ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_01_29.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"st--francis-de-sales--bishop-and-confessor-and-doctor-of-the-church\", \"st--francis-de-sales\"]"
expression: s.0
---
2025-01-29
Vespers of St. Francis de Sales, Bishop and Confessor and Doctor of the Church:
Vespers:
  Antiphons:   Ordinary of Time after Epiphany (or Psalter)
  Psalms:      Psalter
  Chapter:     Common of Confessor Bishops
  Hymn:        Common of Confessor Bishops
  Verse:       Common of Confessor Bishops
  Magnificat:  Common of Confessor Bishops
  Collect:     Proper
